--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,47 +7,31 @@
     --cor-letras-escuras: #151515;
     --cor-marcacao:#32333f;
     --cor-secundaria: #6b6a88;
-   
     --fonte-titulo: 'Inter', sans-serif;
     --fonte-corpo: 'Montserrat', sans-serif;
     --fonte-titulo-tamanho: clamp(0.8rem, 2vw, 1.6rem);
-    --fonte-corpo-tamanho: clamp(1rem, 1.3vw, 1.4rem);
+    --fonte-corpo-tamanho: clamp(0.8rem, 1vw, 1.1rem);
     --fonte-corpo-tamanho-hover: clamp(1.3rem, 1.4vw, 1.5rem);
-
     --altura-icones-grandes: clamp(2.8rem, 5vw, 4rem);
     --altura-icones-pequenos: clamp(1.2rem, 3vw, 2rem);
     --altura-icones-medios: clamp(2rem, 3.5vw, 3rem);
-   
-
-
     --sombra-encima:0 -6px 16px rgba(0, 0, 0, 0.25);
     --sombra-embaixo:0 6px 16px rgba(0, 0, 0, 0.25);
     --sombra-texto:0 6px 10px rgba(0,0,0,0.3);
 
 }
-
-
-
-
-
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
     margin: 0;
-    flex-direction: column;
+    height: 120vh;
     background-color: var(--cor-fundo);
-    min-height: 100vh;
+    min-height: 100dvh;
 }
-
-
-
-
-
 header {
     display: flex;
     background-color: var(--cor-marcacao);
-    justify-content: center;
-    flex-direction: column;
     min-height: 64px;
     padding: 1rem 0;
     margin: 1vh;
@@ -95,55 +79,26 @@ header {
     height: var(--altura-icones-pequenos);
     filter: var(--cor-icones);
 }
-
-
-
-
-
-
-footer {
-    display: flex;
-    justify-content: end;
-    background-color: var(--cor-marcacao);
-    width: 100%;
-    min-height: 7vh;
-    align-items: center;
-    box-shadow: var(--sombra);
-}
-.footer-items {
-    display: flex;
-    gap: 1vh;
-    margin-right: 3vh;
-}
-img.footer-icon {
-    height: var(--altura-icones-medios);
-    filter: var(--cor-icones);
-}
-
-
-
-
-
 main {
     display: flex;
-    align-items: center;
+    justify-content: center;
     flex: 1;
     width: 90%;
 }
-
-
-
-
-
+.esquerdo{
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    min-width: 250px;
+}
 .pages {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     flex-direction: column;
-    min-width: 15vh;
     font-family: var(--fonte-corpo) ;
     background-color: var(--cor-marcacao);
-    height: 35vh;
-    align-items: start;
+    height: 60vh;
+    align-items: center;
     box-shadow: var(--sombra-embaixo);
     border-radius: 15px;
     padding-bottom: 10vh;
@@ -151,6 +106,7 @@ main {
     font-size: var(--fonte-corpo-tamanho);
     padding-right: 4vh;
     min-height: 40vh;
+    margin-top: 10vh;
 }
 .pages-nav {
     display: flex;
@@ -174,12 +130,17 @@ main {
     text-decoration: none;
     text-shadow: var(--sombra);
     justify-content: center;
+    padding-right: 2vh;
 
 }
 .pages-nav a:hover{
     color: #ffffff;
     border-left: solid #ffffff 1.5px;
-    padding-left: 8px;
+    border-top: solid #ffffff 1.5px;
+    border-radius: 15px;
+    box-shadow: var(--sombra-embaixo);
+    border-right: solid var(--cor-secundaria) 1px;
+    border-bottom: solid var(--cor-secundaria) 1px;
 }
 .active{
     color: #ffffff;
@@ -210,16 +171,18 @@ main {
     height: var(--altura-icones-grandes);
     border-radius: 100px;
 }
-
-
-
 .conteudo{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
     width: 80%;
-    margin-left: 4 wvh;
+    margin-left: 4vh;
+    margin-top: 15vh;
    
 }
-.conteudo-cima {
+.conteudo-cards {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 3vh;
     align-items: center;
@@ -227,12 +190,12 @@ main {
     width: 100%;
 
 }
-.conteudo-cima a{
+.conteudo-cards a{
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     flex-direction: column;
     align-items: center;
-    height: 30vh ;
+    height: 34vh ;
     width: 40vh;
     background-color: #ffffff;
     box-shadow: var(--sombra-embaixo);
@@ -240,30 +203,20 @@ main {
     font-family: var(--fonte-titulo);
     color: var(--cor-letras-escuras);
     text-decoration: none;
+    gap: 3vh;
 }
-.conteudo-baixo {
+.progress-graph {
     display: flex;
-    justify-content: center;
-    gap: 5vh;
-    align-items: center;
-    height: 40vh;
-    width: 100%;
-}
-.conteudo-baixo a{
-    display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-    height: 35vh ;
-    width: 55vh;
-    background-color: #ffffff;
-    box-shadow: var(--sombra-embaixo);
-    border-radius: 20px;
-    font-family: var(--fonte-titulo);
-    color: var(--cor-letras-escuras);
-    text-decoration: none;
+    justify-content: center;
+    max-height: 20vh;
 }
-
+.progress-graph img{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: clamp(13rem, 15vw, 15rem);
+}
 .titulo-dashboard {
     display: flex;
     width: 24vh;
@@ -275,4 +228,22 @@ main {
 .titulo-dashboard img{
     height: var(--altura-icones-medios);
 }
-
+footer {
+    display: flex;
+    justify-content: end;
+    background-color: var(--cor-marcacao);
+    width: 100%;
+    min-height: 7vh;
+    align-items: center;
+    box-shadow: var(--sombra);
+    margin-bottom: 0;
+}
+.footer-items {
+    display: flex;
+    gap: 1vh;
+    margin-right: 3vh;
+}
+img.footer-icon {
+    height: var(--altura-icones-medios);
+    filter: var(--cor-icones);
+}
