--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@
     --text:#151515;
     --accent:#6b6a88;
     --shadow:0 6px 16px rgba(0,0,0,.25);
+    --font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* RESET */
@@ -228,7 +229,6 @@ footer img{
     width: 100%;
     display:flex;
     flex-direction: column;
-    gap:1rem;
     justify-content:center;
     align-items: center;
 }
@@ -239,8 +239,9 @@ footer img{
     justify-content: center;
     background-color: var(--dark);
     color: #ffffff;
-    border-radius: 15px;
-    width: 20%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    width: 95%;
     height: 70px;
 }
 
@@ -248,7 +249,8 @@ footer img{
     width:95%;
     height:750px;
     background:#ffffff;
-    border-radius:20px;
+    border-bottom-left-radius:20px;
+    border-bottom-right-radius:20px;
     padding:2rem;
     box-shadow:var(--shadow);
     text-decoration:none;
@@ -262,6 +264,23 @@ footer img{
 .content-title img{
     height:28px;
     width: 28px;
+}
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--dark);
+    color: var(--light);
+    height: 60px;
+    border-radius: 15px;
+    font-family: var(--font) bold;
+    font-size: 15px;
+    width: 80%;
+    gap:10px;
+}
+
+.btn img{
+    height: 20px;
 }
 
 /************** FINANCE *****************/
@@ -348,12 +367,7 @@ footer img{
     width: 50%;
 }
 
-.specific-finance-main-btn {
-    background-color: var(--dark);
-    color: var(--light);
-    height: 6vh;
-    border-radius: 15px;
-}
+
 .specific-finance-main-btn:hover {
     background-color: var(--text);
 }
@@ -367,8 +381,14 @@ footer img{
     justify-content: center;
     align-items: center;
 }
-.specific-tasks-today {
-    width:85%;
+.specific-tasks-main {
+    width: 90%;
+    display: flex;
+    gap:40px;
+    justify-content: center;
+}
+.specific-tasks-main-today {
+    width:50%;
     height:400px;
     background:#ffffff;
     border-radius:20px;
@@ -376,33 +396,72 @@ footer img{
     box-shadow:var(--shadow);
     text-decoration:none;
     display:flex;
-    flex-direction:column;
     align-items: center;
     gap: 2%;
+    padding: 20px;
+}
+.specific-tasks-main-today-next {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+    border: solid 1px #cacaca;
+    border-radius: 15px;
+    overflow-y:auto;
+    gap: 20px;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.specific-tasks-main-today-now {
+    width: 50%;
 }
 .specific-tasks-future {
-    width:90%;
-    height:50%;
-    padding:2rem;
-    display:flex;
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     align-items: center;
-    gap: 2%;
+    justify-content: center;
 }
 
 .specific-tasks-future-card {
-    width:40%;
-    height:250px;
-    background:#ffffff;
-    border-radius:20px;
-    padding:2rem;
-    box-shadow:var(--shadow);
-    text-decoration:none;
-    display:flex;
-    flex-direction:column;
+    width: 400px;
+    height: 250px;
+    background: #fff;
+    border-radius: 20px;
+    padding: 2rem;
+    box-shadow: var(--shadow);
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    margin: 0px ;
-    gap: 2%;
 }
+.content-title-tasks{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--dark);
+    color: #ffffff;
+    border-radius: 15px;
+    width: 95%;
+    height: 80px;
+    margin-bottom: 20px;
+}
+.content-title-tasks img{
+    height:28px;
+    width: 28px;
+}
+.specific-tasks-main-btns {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
 @media (max-width:1200px){
     main{
         flex-direction:column;
@@ -424,9 +483,17 @@ footer img{
     .specific-finance-top-values,.card-title p,h4{
         font-size: smaller;
     }
+    .specific-tasks-future {
+        gap: 20px;
+        align-items: center;
     }
+    .specific-tasks-future-card {
+        width: 400px;
+        height: 250px;
+    }
+}
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
 
     body{
         min-width:450px;
@@ -456,6 +523,10 @@ footer img{
         width:450px;
         height:180px;
         object-fit:cover;
+    }
+    .specific-tasks-future-card {
+        width: 300px;
+        height: 200px;
     }
 }
 
