--- a/styles/styles.css
+++ b/styles/styles.css
@@ -462,14 +462,27 @@ footer img{
     overflow-y: auto;
     overflow-x: hidden;
 }
-.credit-cards-accounts {
+.credit-cards-accounts.active {
+    display: block;
+    height: 100%;
+}
+.credit-cards-main-content {
     display: flex;
-    flex-wrap: wrap;
     border:solid #cacaca 1px;
     border-left: 0px;
-    width: 100%;
+    width: 70%;
+    height: 100%;
     justify-content: center;
-    overflow-y: scroll;
+    align-items: center;
+}
+.credit-cards-all-accounts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
 }
 .self-card {
     display: flex;
@@ -480,19 +493,43 @@ footer img{
     margin: 20px;
     border-radius: 10px;
 }
-.self-card:hover {
+.self-card:hover, .self-card.active{
     background-color: var(--dark);
     color: #fff;
 }
 .credit-cards-accounts-graph {
-    width: 80%;
+    width: 90%;
 }
 .credit-cards-accounts-self {
-    height: 400px;
-    width: 50%;
+    height: auto;
+    width: 35%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 15px;
+    border: 1px #cacaca solid;
+    margin: 10px;
+    padding-bottom: 10px;
+
+}
+.credit-cards-accounts-self h3{
+    background-color: var(--dark);
+    width: 100%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    color: white;
+    font-family: var(--font);
+    font-weight: 400;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.credit-cards-accounts-self h2 {
+    font-family: var(--font);
+    font-weight: 500;
+    padding-top: 10px;
+
 }
 /************** TASKS *****************/
 .specific-tasks {
@@ -733,13 +770,8 @@ footer img{
         flex-direction: column;
         width: 100%;
     }
-    .credit-cards-accounts {
-        height: 700px;
-        border-top: 0;
-        border-left: solid #cacaca 1px;
-        width: 100%;
-    }
-    .navegation {
+    
+    #navegation {
         display: none;
     }
     #openNavegation {
@@ -752,11 +784,29 @@ footer img{
         border-bottom-right-radius: 10px;
         border-bottom-left-radius: 10px;
     }
+    #openNavegation img {
+        height: 20px;
+    }
     #openNavegation:hover {
         background-color: #1d1e25;
     }
     .content-box {
         margin-top: 1rem;
+    }
+    .specific-finance-main {
+        flex-direction: column-reverse;
+    }
+    .specific-finance-main-right {
+        flex-direction: row;
+        width: auto;
+        padding-top: 2rem;
+    }
+    .specific-finance-main-left {
+        width: 100%;
+    }
+    .credit-cards-main-content {
+        border-left: solid 1px #cacaca;
+        border-top: 0px;
     }
 }
 
