--- a/styles/styles.css
+++ b/styles/styles.css
@@ -465,6 +465,8 @@ footer img{
     display: flex;
     width: 100%;
     height: 800px;
+    justify-content: center;
+    align-items:center ;
 }
 .credit-cards {
     border:solid #cacaca 1px;
@@ -482,10 +484,12 @@ footer img{
 .credit-cards-accounts.active {
     display: block;
     height: 100%;
+    width: 100%;
 }
 
 .credit-cards-accounts {
     display: none;
+    width: 100%;
 }
 .credit-cards-main-content {
     display: flex;
@@ -503,7 +507,7 @@ footer img{
     align-items: center;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 .self-card {
     display: flex;
@@ -775,14 +779,16 @@ footer img{
         width: 80%;
     }
     .credit-cards {
-        display: flex;
-        flex-direction: row;
         width: 100%;
         flex-wrap: wrap;
-        overflow-y: auto;
-        height:92px;
+        overflow-x: scroll;
+        height: 10%;
         align-items: center;
         justify-content: center;
+    }
+    .credit-cards-main-content {
+        width: 100%;
+        height: 800px;
     }
     .self-card {
         width: 150px;
@@ -790,9 +796,9 @@ footer img{
         justify-content: center;
     }
     .finance-credit-content {
-
         flex-direction: column;
         width: 100%;
+        height: 100%;
     }
     
     #navegation {
